# TentOfTrials

.github/workflows/: generate-diagnostics.yml
diagnostic/: build-b31bc492.json  build-b31bc492.logd
frailbox/: CMakeLists.txt  Makefile
frailbox/include/: buddy.h
frailbox/src/: arena.c  buddy.c  logger.c  sandbox.c
frailbox/tests/: test_buddy.c
